--- a/GuidePageAnimation_Demo/zh-Hans.lproj/Main.strings
+++ b/GuidePageAnimation_Demo/zh-Hans.lproj/Main.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UIButton"; normalTitle = "Create Team"; ObjectID = "gEF-Jz-7qk"; */
-"gEF-Jz-7qk.normalTitle" = "Create Team";
+/* Class = "UIButton"; normalTitle = ""; ObjectID = "gEF-Jz-7qk"; */
+"gEF-Jz-7qk.normalTitle" = "按钮1";
 
-/* Class = "UIButton"; normalTitle = "Sign in"; ObjectID = "ogL-Ie-weF"; */
-"ogL-Ie-weF.normalTitle" = "Sign in";
+/* Class = "UIButton"; normalTitle = ""; ObjectID = "ogL-Ie-weF"; */
+"ogL-Ie-weF.normalTitle" = "按钮2";
